# xdagent

./: .gitignore  README.md  main.py  pyproject.toml
app/: approvals.py  config_store.py  history.py  llm.py  schemas.py  workspace.py
app/agent/: context.py  loop.py  prompts.py
app/routes/: approval.py  chat.py  config.py  conversation.py  files.py
app/tools/: __init__.py  read_files.py  registry.py  write_files.py
tui/: Cargo.toml
tui/src/: api.rs  app.rs  main.rs  types.rs  ui.rs
