[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
